--- a/module1_fundamentals/m1.lesson01.md
+++ b/module1_fundamentals/m1.lesson01.md
@@ -92,11 +92,11 @@ important terms:
 ```
 git clone https://github.com/webbeast2019/module1-exercises
 ```
-2. create branch:   ***git checkout -b rainbow-yuval***
+2. create branch:   ***git checkout -b rainbow(yuval)***
 3. make changes
 4. add changes to git:    ***git add -A***
 5. commit changes: ***git commit -m "Adding yuval's info"***
-6. push to your repo:  ***git push origin rainbow-yuval***
+6. push to your repo:  ***git push origin rainbow(yuval)***
    Or:  ***git push origin HEAD***
 8. open PR to master (from github website)
 
@@ -177,7 +177,6 @@ Add input with number type, an answer button and correct / wrong indication.
 1. go through *all* links in today's lesson, research the terms you've learned
 2. [Understanding the CSS display property](https://www.creativebloq.com/how-to/understanding-the-css-display-property)
 3. checkout what you can do with [css3](http://scottcheng.github.io/revolutionary-css3)
-5.
 4. Don't forget pre-lesson material!
 
 ---
@@ -192,6 +191,7 @@ Add input with number type, an answer button and correct / wrong indication.
 ### Extra:
 
 - [See reminder GitHub for Noobs - Using the Command Line](https://www.youtube.com/watch?v=JPKOESR1k04)
+- [Katakoda interactive git](https://www.katacoda.com/courses/git/)
 - [Getting started with git](https://instruqt.com/public/topics/getting-started-with-git)
 - If you still feel you lack some basics - see [JS in 12 minutes](https://www.youtube.com/watch?v=Ukg_U3CnJWI)
 - Solve levels 1-2 at [checkio](https://checkio.org/)
