--- a/module1_fundamentals/m1.lesson01.md
+++ b/module1_fundamentals/m1.lesson01.md
@@ -21,7 +21,7 @@ Explain the course system + Wrap up what you did in the intro-module
 It's all about building a (learning) system... that works!
 
 <div>
-    <img src="./assets/webbeast_overview.jpg">
+    <img src="./assets/webbeast_power_sources.png">
 </div>
 
 ---
