--- a/module1_fundamentals/m1.lesson02.md
+++ b/module1_fundamentals/m1.lesson02.md
@@ -19,7 +19,7 @@
 
 ### Basic DOM manipulation
 
-[getElementById]()
+[getElementById](https://developer.mozilla.org/en-US/docs/Web/API/Document/getElementById)
 ```
     <div id="moshe"></div>
     <script>
@@ -77,20 +77,33 @@ block
 <span style="display:block; border:dotted;">Content 2</span> 
 
 ---
-### How CSS display elements? - display 
+### How CSS display elements? - display
 inline-block (inline with block sizing capabilities)
 ```
-<span style="display:inline-block; border:dotted; height:100px; width:100px;"></span> 
-<span style="display:inline-block; border:dotted; height:100px; width:100px;"></span> 
+<span style="display:inline-block; border:dotted; height:100px; width:100px;"></span>
+<span style="display:inline-block; border:dotted; height:100px; width:100px;"></span>
 ```
 <span style="display:inline-block; border:dotted; height:100px; width:100px;"></span> 
 <span style="display:inline-block; border:dotted; height:100px; width:100px;"></span> 
 
 display:none will - remove it from the flow (while `visibility:hidden` will just hide it)
 
-So many options for this property... 
-try <!-- .element: class="fragment" --> and play with [display](https://www.w3schools.com/cssref/pr_class_display.asp)
+---
+### How CSS display elements? - display
+[flex](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox)
+```
+<div style="display:flex">
+    <div style="display:inline; border:dotted;">Content 1</div>
+    <span style="display:inline; border:dotted;">Content 2</span>
+</div>
+```
+<div style="display:flex">
+    <div style="display:inline; border:dotted;">Content 1</div>
+    <span style="display:inline; border:dotted;">Content 2</span>
+</div>
 
+So many options for this property...
+try <!-- .element: class="fragment" --> and play with [display](https://www.w3schools.com/cssref/pr_class_display.asp)
 
 ---
 
@@ -161,16 +174,15 @@ Caesar code encryption / decryption page
 use tab for Caesar encryption decryption and send messages ro each other via slack(key is 1to26, hi/low case?)
 
 ---
-
-
 ### Further reading
-1. [css3 flexbox](https://www.w3schools.com/css/css3_flexbox.asp)
+1. [Css3 flexbox](https://www.w3schools.com/css/css3_flexbox.asp)
 2. [A Complete Guide to Flexbox](https://css-tricks.com/snippets/css/a-guide-to-flexbox/)
-3. css [positioning](https://developer.mozilla.org/en-US/docs/Web/CSS/position)
+3. Css [positioning](https://developer.mozilla.org/en-US/docs/Web/CSS/position)
 
-HW:
-continue calculator
+---
+### Home Work:
+continue with web calculator
 
-extra:
+### Extra
 1. [regex tutorial](https://regexone.com/)
-2. use my-first-page.html from last lesson Add a script which change the color of all the text in the page. do not use inline styles.
+2. Use my-first-page.html from last lesson Add a script which change the color of all the text in the page. do not use inline styles.
