--- a/module1_fundamentals/m1.lesson01.md
+++ b/module1_fundamentals/m1.lesson01.md
@@ -1,6 +1,6 @@
 ## Module 1 Lesson 01
 ### Web Introduction
-(This document is optimized for presentation using [reveal-md](https://github.com/webpro/reveal-md))
+(This document optimized for [reveal-md](https://github.com/webpro/reveal-md))
 
 ---
 
