--- a/module1_fundamentals/m1.lesson03.md
+++ b/module1_fundamentals/m1.lesson03.md
@@ -1,6 +1,6 @@
 ## Module 1 Lesson 03
 ### CSS 2 & Javascript basics 2
-(This document is optimized for presentation using [reveal-md](https://github.com/webpro/reveal-md))
+(This document optimized for [reveal-md](https://github.com/webpro/reveal-md))
 
 ---
 
