--- a/module1_fundamentals/m1.lesson02.md
+++ b/module1_fundamentals/m1.lesson02.md
@@ -48,13 +48,13 @@ try:
         moses[0].style.backgroundColor = 'red';
     <script>
 ```
-other multi-elements Selector works in the same way (like: [getElementsByTagName](https://developer.mozilla.org/en-US/docs/Web/API/Document/getElementsByTagName))
+Other multi-elements Selector works in the same way (like: [getElementsByTagName](https://developer.mozilla.org/en-US/docs/Web/API/Document/getElementsByTagName))
 
 
-short exercise: how to do [ForEach on node elements](https://stackoverflow.com/questions/24775725/loop-through-childnodes)?
-- create a ul with 10 li elmements
+Short exercise: how to do [ForEach on node elements](https://stackoverflow.com/questions/24775725/loop-through-childnodes)?
+- Create a ul with 10 li elmements
 <!-- .element: class="fragment" -->
-- use javascript to set each li content (index + ' mississippi')   
+- Use javascript to set each li content (index + ' mississippi')
 <!-- .element: class="fragment" -->
 
 ---
@@ -170,7 +170,6 @@ Live code demo
 ### JS basics: practice 
 Caesar code encryption / decryption page
 
-<img>
 use tab for Caesar encryption decryption and send messages ro each other via slack(key is 1to26, hi/low case?)
 
 ---
