--- a/module1_fundamentals/m1.lesson03.md
+++ b/module1_fundamentals/m1.lesson03.md
@@ -149,6 +149,7 @@ try them!
 ---
 
 ### JS Best practices and code style
+- [Webbeast code guide](https://github.com/webbeast2019/content/blob/master/WEBBEAST_CODE_GUIDE.md)
 - [jstherightway](http://jstherightway.org/#js-code-style)
 - [linting](http://jshint.com/)
 - [google styleguide](https://google.github.io/styleguide/javascriptguide.xml)
