module 1 lessons 1 fix

--- a/module1_fundamentals/m1.lesson01.md
+++ b/module1_fundamentals/m1.lesson01.md
@@ -183,7 +183,7 @@ Add input with number type, an answer button and correct / wrong indication.
 
 ### Home Work:
 - weekly task: build and design a web calculator
-- fork and PR: ***home-module1-exercises/lesson1-web-calculator***
+- PR to: ***module1-exercises/lesson01.calculator***
 - [Learn Git Branching](https://learngitbranching.js.org/)
 
 ---
