--- a/module1_fundamentals/m1.lesson02.md
+++ b/module1_fundamentals/m1.lesson02.md
@@ -181,8 +181,8 @@ use tab for Caesar encryption decryption and send messages ro each other via sla
 
 ---
 ### Home Work:
-continue with web calculator
-
+1. Continue with web calculator
+2. Continue with caesar cipher
 ### Extra
 1. [regex tutorial](https://regexone.com/)
 2. Use my-first-page.html from last lesson Add a script which change the color of all the text in the page. do not use inline styles.
