--- a/module1_fundamentals/m1.self_learning.md
+++ b/module1_fundamentals/m1.self_learning.md
@@ -61,6 +61,7 @@ const ins2 = new Class();
 ---
 
 CSS
+ - [css units](https://www.w3schools.com/cssref/css_units.asp)
  - [tooltip](https://www.w3schools.com/css/css_tooltip.asp)
  - [shadows](https://www.w3schools.com/css/css3_shadows.asp)
  - [animations](https://www.w3schools.com/css/css3_animations.asp)
