--- a/module1_fundamentals/m1.lesson07.md
+++ b/module1_fundamentals/m1.lesson07.md
@@ -1,5 +1,5 @@
 ## Module 1 Lesson 07
-### Advanced debugging and Introduction to JQuery
+### Advanced debugging and REST API
 (This document is optimized for presentation using [reveal-md](https://github.com/webpro/reveal-md))
 
 ---
@@ -14,7 +14,7 @@
 
 ---
 
-### Chrome Advanced debugging
+### [Chrome Advanced debugging](https://www.youtube.com/watch?v=zmbBIF2Xecs)
 * Elements Tab, styles and breakpoints
 * Console
 * Network
@@ -57,9 +57,10 @@ Target website: http://www.ynet.co.il/. find out:
 ---
 ### Further reading
 See facebook and Instagram API examples:
+* [REST API - Internel Israel](https://internet-israel.com/%D7%9E%D7%93%D7%A8%D7%99%D7%9B%D7%99%D7%9D/rest/rest-%D7%94%D7%A7%D7%93%D7%9E%D7%94/)
 * [REST API concepts and examples](https://www.youtube.com/watch?v=7YcW25PHnAA)
-Install and checkout Postman
-* [Postman](https://www.youtube.com/watch?v=YKalL1rVDOE)
+* Install and checkout [Postman](https://www.youtube.com/watch?v=YKalL1rVDOE)
+
 
 ---
 ### Home Work:
