--- a/module1_fundamentals/m1.self_learning.md
+++ b/module1_fundamentals/m1.self_learning.md
@@ -37,6 +37,10 @@ const ins2 = new Class();
     - [objects](https://github.com/airbnb/javascript#objects)
 
 ---
+HTTP
+[What is HTTP? & GET / POST requests](https://www.w3schools.com/tags/ref_httpmethods.asp)
+
+---
 
  HTML
  - [Form validation](https://developer.mozilla.org/en-US/docs/Learn/HTML/Forms/Form_validation)
