--- a/module1_fundamentals/m1.lesson09.md
+++ b/module1_fundamentals/m1.lesson09.md
@@ -21,7 +21,7 @@
     * Command menu can be accessed using the top "View" tab > command pallete
 <!-- .element: class="fragment" -->
 
-* VSCode Extension - Git Graph
+* VSCode Extension - Git Graph (See on `module1-exercises`)
 <!-- .element: class="fragment" -->
 
 * Explore extensions by yourself :)
