--- a/module1_fundamentals/m1.lesson04.md
+++ b/module1_fundamentals/m1.lesson04.md
@@ -115,7 +115,7 @@ which can succeed or fail in the future
 - JQuery also provide (better) AJAX API, which wrap XMLHttpRequest
 <!-- .element: class="fragment" -->
 
-- new school: Fetch
+- New school: [Fetch](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API/Using_Fetch) (Or [Axios](https://github.com/axios/axios))
 <!-- .element: class="fragment" -->
 
 - same concept, easier API
@@ -155,12 +155,6 @@ but you can use it for many other resources
     - extra: display only users joined in the 3 months
     - don't forget to PR!
 
----
-
-
-### Got the basics - Whats next? 
-* Material for self learning (will be published separately)
-* Planning infrastructure together
 
 ---
 
@@ -171,6 +165,7 @@ but you can use it for many other resources
 ---
 
 ### Home Work:
+* Find teammate for next assignment
 * Continue cards memory game
 * Finish class practice - display github users
 
