--- a/module1_fundamentals/m1.lesson04.md
+++ b/module1_fundamentals/m1.lesson04.md
@@ -134,7 +134,7 @@ which can succeed or fail in the future
 * fetch return a [promise object](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)
 <!-- .element: class="fragment" -->
 
-* JQuery also uses [AJAX](https://jsonplaceholder.typicode.com/). try to use the dev tool
+* JQuery also uses [AJAX](https://www.w3schools.com/jquery/tryit.asp?filename=tryjquery_ajax_ajax). try to use the dev tool
 Network tab to compare AJAX and fetch requests.
 <!-- .element: class="fragment" -->
 
