--- a/module1_fundamentals/m1.lesson07.md
+++ b/module1_fundamentals/m1.lesson07.md
@@ -64,10 +64,12 @@ See facebook and Instagram API examples:
 
 ---
 ### Home Work:
-* Build API server:
+* Build Blog API server:
     - See [Routes section](https://jsonplaceholder.typicode.com/), click on the first 5 GET requests to see the JSON responses
     - Create a server which serve the first 5 request you've reviewed. response data should be identical.
     - You can download and use [Posts JSON](https://jsonplaceholder.typicode.com/posts) and [Comments JSON](https://jsonplaceholder.typicode.com/comments)
+
+---
 
 ### Extra:
 * Build API server - add support for 'search' parameter for posts. it will return data items which include the provided string in their name OR body properties.
