--- a/module1_fundamentals/m1.lesson08.md
+++ b/module1_fundamentals/m1.lesson08.md
@@ -61,18 +61,22 @@ go to resources (here are some common results)
 
 ### [Lodash: A JavaScript utility library](https://lodash.com)
 * Basic concept: pass data, then predicate (if needed/supported)
-* [sort](https://lodash.com/docs/4.17.5#sortBy)
-* [clone](https://lodash.com/docs/4.17.5#clone)
-* [filter](https://lodash.com/docs/4.17.5#filter)
-* [map](https://lodash.com/docs/4.17.5#map)
-* and many, many more
+* Live demo
+    - [sort](https://lodash.com/docs/4.17.11#sortBy)
+    - [clone](https://lodash.com/docs/4.17.11#clone)
+    - [filter](https://lodash.com/docs/4.17.11#filter)
+    - [map](https://lodash.com/docs/4.17.11#map)
+    - and many, many more
 
 ---
 
 ### Lodash: A JavaScript utility library - Practice
 * Live Short Demo
-* Use Lodash sort and filter flights in our past flights app exercise (lessons 5-6)
-* Bonus: add text filter (search in the entire flight object)
+* Use Lodash sort and filter your Blog API server (lesson 7 H.W.)
+    - sorting: `/posts?sortBy=title`
+    - filtering: `/posts?id=3&userId=1`
+* Bonus: add text filter (search the body property). Note the spaces.
+    - `/posts?bodyInclude="some text"`
 
 ---
 
@@ -83,7 +87,7 @@ go to resources (here are some common results)
 * [Css reboot](https://scotch.io/tutorials/a-look-at-bootstrap-4s-new-reset-rebootcss#toc-rebootcss)
 * [Getting started](http://getbootstrap.com/docs/4.0/getting-started/introduction/)
 * Flexbox vs bootstrap grid vs [css grid](https://www.w3schools.com/css/css_grid.asp) [2](https://css-tricks.com/snippets/css/complete-guide-grid/)
-* practice - use bootstrap layout for your mini-app
+* Practice - use bootstrap layout for Blog API client side.
 
 
 ---
@@ -101,6 +105,8 @@ go to resources (here are some common results)
 * Add "Unsupported on mobile devices" for screens smaller then *md*
 <!-- .element: class="fragment" -->
 
+* Use Bootstrap component as you wish
+<!-- .element: class="fragment" -->
 ---
 
 ### Handlebars: Template engine
