--- a/module1_fundamentals/m1.lesson08.md
+++ b/module1_fundamentals/m1.lesson08.md
@@ -33,7 +33,7 @@
 ---
 
 ### Libraries and Docs: Learning to learn
-go to resources (here are some common results)
+Go to resources (here are some common results)
 - Stack overflow - mostly specific and right to the point
 - w3school - great for getting short and specific data
 - MDN - very professional data, include reference for standard, specs, compatibility etc
