--- a/module1_fundamentals/m1.lesson08.md
+++ b/module1_fundamentals/m1.lesson08.md
@@ -37,7 +37,7 @@ Go to resources (here are some common results)
 - Stack overflow - mostly specific and right to the point
 - w3school - great for getting short and specific data
 - MDN - very professional data, include reference for standard, specs, compatibility etc
-- Item specific docs - Angular, JQuery, Lodash etc.
+- Item specific docs - React, JQuery, Lodash etc.
 - Medium / Hacker noon etc. - Many posts / elaborated articles written mostly by professional
 - github / npm - most likely will hold some docs or link to docs, and the source.
 
