--- a/module1_fundamentals/m1.lesson09.md
+++ b/module1_fundamentals/m1.lesson09.md
@@ -5,27 +5,12 @@
 ---
 
 ### Prep
-* [How to use Git inside of VSCode](https://www.youtube.com/watch?v=6n1G45kpU2o)
 * [Leaflet - Create a map with a marker](https://www.youtube.com/watch?v=wVnimcQsuwk)
 
 ### Agenda
-1. Git GUI tools
 1. The concept of API
 2. Web API 1: OpenWeatherMap
 3. Web API 2: Leaflet
-
----
-
-### Git GUI tools
-* [VSCode Git tools](https://www.youtube.com/watch?v=VOwyH2-VCVY)
-    * Command menu can be accessed using the top "View" tab > command pallete
-<!-- .element: class="fragment" -->
-
-* VSCode Extension - Git Graph (See on `module1-exercises`)
-<!-- .element: class="fragment" -->
-
-* Explore extensions by yourself :)
-<!-- .element: class="fragment" -->
 
 ---
 
@@ -51,7 +36,8 @@
 * [Sign up](https://home.openweathermap.org/users/sign_up)
 * Get [API token](https://home.openweathermap.org/api_keys)
 * [Try it!](https://openweathermap.org/current)
-* Note: follow the spec. use ***api.openweathermap.org*** not ***sample.openweathermap.org***
+
+Note follow the spec. use ***api.openweathermap.org*** not ***sample.openweathermap.org***
 
 ---
 
@@ -80,8 +66,22 @@ bonus: add requests [caching](https://whatis.techtarget.com/definition/caching) 
     - Center map on the selected marker
 
 ---
+
 ### Further reading
 * [Introduction To Leaflet](https://www.youtube.com/watch?v=6QFkgOeQc0c)
 
 ### HW
 * Finish class practice at home (Will Evolve into level-1 project)
+
+---
+
+### Project 1 future requirements:
+* Server side (for static files only)
+* Type script
+* Npm + nodemon + ts-lint
+* cache weather API (on the client)
+
+### Project 1 Extra:
+* City can be selected by clicking on map marker or dropdown.
+* Deploy to heroku
+* Make the server do the weather API requests, cache requests on the server side
