--- a/module1_fundamentals/m1.lesson11.md
+++ b/module1_fundamentals/m1.lesson11.md
@@ -11,7 +11,7 @@
 1. OOP: what and why?
 2. A story about javascript school
 3. The early days (Before ES6)
-4. ES6 wrapping
+4. ES6 and Beyond
 5. Typescript OOP
 
 ---
@@ -152,7 +152,7 @@ Help Moshe complete his task using Functions and Porotoype.
 
 ---
 
-### ES6 wrapping
+### ES6 and Beyond
 ```js
 class Person {
     constructor(first, last, age, gender) {
@@ -173,6 +173,35 @@ class Person {
         const genderStr = (this.gender === 'M') ? 'Male' : 'Female';
         return `${this.getName()} is  ${this.age} ${genderStr}`;
     };
+}
+```
+
+---
+
+### ES6 and Beyond
+ES7 additions:
+```
+class MyClass {
+    myProp = 3;
+
+    // instead of
+    // constructor() { this.myProp = 3}
+}
+```
+
+---
+
+### ES6 and Beyond
+ES7 additions:
+```
+class MyClass {
+    myMethod() {
+        console.log(this);
+    }
+
+    myMethod2 = () => {
+        console.log(this);
+    }
 }
 ```
 
