--- a/module1_fundamentals/m1.lesson08.md
+++ b/module1_fundamentals/m1.lesson08.md
@@ -149,5 +149,5 @@ What is a template engine?
 * [You don't (may not) need Lodash](https://github.com/you-dont-need/You-Dont-Need-Lodash-Underscore)
 * Bootstrap 4 Grid [A Beginner’s Guide to Handlebars](https://www.youtube.com/watch?v=qmPmwdshCMw)
 
-HW:
+### Home Work:
 * Finish REST API - you may use Bootstrap and Lodash
