--- a/module1_fundamentals/m1.lesson09.md
+++ b/module1_fundamentals/m1.lesson09.md
@@ -70,7 +70,7 @@ bonus: add requests [caching](https://whatis.techtarget.com/definition/caching) 
 ### Further reading
 * [Introduction To Leaflet](https://www.youtube.com/watch?v=6QFkgOeQc0c)
 
-### HW
+### Home Work:
 * Finish class practice at home (Will Evolve into level-1 project)
 
 ---
