--- a/module1_fundamentals/m1.lesson10.md
+++ b/module1_fundamentals/m1.lesson10.md
@@ -182,8 +182,13 @@ output is a single array containing the cells which exist in array1, but not in 
 * [How to Publish & Update a Package](https://docs.npmjs.com/getting-started/publishing-npm-packages)
 * [learn-typescript-in-30-minutes](https://tutorialzine.com/2016/07/learn-typescript-in-30-minutes)
 
-###HW: 
-read and play with the code snippets 
-* [TypeScript Interfaces](https://code.tutsplus.com/tutorials/typescript-for-beginners-part-3-interfaces--cms-29439)
-* [TypeScript Classes](https://code.tutsplus.com/tutorials/typescript-for-beginners-part-4-classes--cms-29565)
-* [TypeScript Generics](https://code.tutsplus.com/tutorials/typescript-for-beginners-part-5-generics--cms-29603)
+---
+
+### Home Work:
+* Convert your weather app to use npm.
+    - Should be started by `npm install` & `npm start`
+    - Provide a readme file with description & instructions
+* Read and play with the code snippets
+    - [TypeScript Interfaces](https://code.tutsplus.com/tutorials/typescript-for-beginners-part-3-interfaces--cms-29439)
+    - [TypeScript Classes](https://code.tutsplus.com/tutorials/typescript-for-beginners-part-4-classes--cms-29565)
+    - [TypeScript Generics](https://code.tutsplus.com/tutorials/typescript-for-beginners-part-5-generics--cms-29603)
