--- a/module2_frontend/m2.lesson01.md
+++ b/module2_frontend/m2.lesson01.md
@@ -1,5 +1,5 @@
 ## Module 2 Lesson 1
-### Introduction to React
+### React Introduction
 (This document is optimized for presentation using [reveal-md](https://github.com/webpro/reveal-md))
 
 ---
