--- a/module2_frontend/m2.lesson01.md
+++ b/module2_frontend/m2.lesson01.md
@@ -151,6 +151,7 @@ Be aware to the console warnings and errors
 
 ### Extra
 Improve our todo-list app:
+* Add on the *Header* Component an item counter.
 * Add on the *Header* Component a "Add item" button. On click, add a new item to the list with the text: "New Item"
 * Make sure you only manipulate the DOM with react
 * Make sure the todo-list data is stored in a react component (not global)
