--- a/module2_frontend/m2.lesson02.md
+++ b/module2_frontend/m2.lesson02.md
@@ -5,7 +5,7 @@
 ---
 
 ### Prep
-* [React JS Tutorial (1:35:00 - 1:50:00)](https://www.youtube.com/watch?v=UtIOMUQ7nWM)
+* [React JS Tutorial (1:35:00 - 2:00:00)](https://www.youtube.com/watch?v=UtIOMUQ7nWM)
 
 
 ### Agenda
@@ -68,13 +68,13 @@ Transpiler/Compiler - babel (JSX/TS/es6 to es5)
 Typescript & ES modules
 
 create-react-app uses webpack and babel under the hood -
-you most likely never need to touch them directly!
+you most likely never touch them directly!
 <!-- .element: class="fragment" -->
 
 ---
 ### Create React App
-Practice: Lets use and explore it
-* Use npx is a better option than global installation
+Practice: Lets create an app and explore it
+* Using npx is a better option than global installation
 * Use typescript
 * Explore project structure
 
@@ -85,7 +85,7 @@ Practice: Move the todo-app code from last class into the app you'ev just create
 
 
 ---
-### State and Events
+### [State](https://reactjs.org/docs/state-and-lifecycle.html) and [Events](https://reactjs.org/docs/handling-events.html)
 Repo - react-todo-list <br/>
 Requirements - The user should be able to:
 * Add new todo item (with text provided by the user)
@@ -102,7 +102,10 @@ Requirements - The user should be able to:
 
 ---
 ### Home Work:
-Finish [React official Intro (tic - tac - to)](https://reactjs.org/tutorial/tutorial.html)
+* Finish [React official Intro (tic - tac - to)](https://reactjs.org/tutorial/tutorial.html)
+* Finish watching [React JS Tutorial](https://www.youtube.com/watch?v=UtIOMUQ7nWM)
 
-### Extra
-Improve our todo-list app:
+### Extra - Todo app
+html `<title>` should contain the name and counter of the active filer, examples:
+* Todo:All(8)
+* Todo:Completed(2)
