--- a/module1_fundamentals/m1.self_learning.md
+++ b/module1_fundamentals/m1.self_learning.md
@@ -13,7 +13,7 @@ Javascript
 - [DOM navigation](https://www.w3schools.com/js/js_htmldom_navigation.asp)
 - [prototypes](https://www.w3schools.com/js/js_object_prototypes.asp)
 - [prototypes function vs per instance function](https://stackoverflow.com/questions/4508313/advantages-of-using-prototype-vs-defining-methods-straight-in-the-constructor)
-
+- [Error handling, "try..catch"](https://javascript.info/try-catch)
 
 in the last link see the usage of a single var for both instances:
 ``` js
