--- a/module2_frontend/m2.lesson01.md
+++ b/module2_frontend/m2.lesson01.md
@@ -31,14 +31,12 @@
 
 ### Why use a modern UI Library?
 
-* Reusable Components (Not unique to React)
-<!-- .element: class="fragment" -->
+* <!-- .element: class="fragment" --> Reusable Components (Not unique to React)
 
-* <!-- .element: class="fragment" -->
-Designed for [SPA](https://he.wikipedia.org/wiki/%D7%99%D7%99%D7%A9%D7%95%D7%9E%D7%99_%D7%93%D7%A3_%D7%99%D7%97%D7%99%D7%93)
+* <!-- .element: class="fragment" --> Designed for [SPA](https://he.wikipedia.org/wiki/%D7%99%D7%99%D7%A9%D7%95%D7%9E%D7%99_%D7%93%D7%A3_%D7%99%D7%97%D7%99%D7%93)
 
-* Always remember: It's not mandatory
-<!-- .element: class="fragment" -->
+* <!-- .element: class="fragment" --> Always remember: It's not mandatory
+
 
 ---
 
@@ -61,28 +59,28 @@ Designed for [SPA](https://he.wikipedia.org/wiki/%D7%99%D7%99%D7%A9%D7%95%D7%9E%
 ### Why React?
 React vs Angular - open discussion
 
-- Toolbox size (library vs Infrastructure)
+* Toolbox size (library vs Infrastructure)
 <!-- .element: class="fragment" -->
 
-- JSX vs Angular templating engine
+* JSX vs Angular templating engine
 <!-- .element: class="fragment" -->
 
-- Learning curve
+* Learning curve
 <!-- .element: class="fragment" -->
 
-- Redux (and other state management)
+* Redux (and other state management)
 <!-- .element: class="fragment" -->
 
-- Creation (CLI / Manual) and Refactoring
+* Creation (CLI / Manual) and Refactoring
 <!-- .element: class="fragment" -->
 
-- Virtual DOM vs Angular Change Detection
+* Virtual DOM vs Angular Change Detection
 <!-- .element: class="fragment" -->
 
 ---
 
 ### ES6 Refresh
-Practice time
+Practice time (Tip: use [Quokka.js](https://quokkajs.com/) in a scratch file)
 
 ---
 
