--- a/module2_frontend/m2.lesson01.md
+++ b/module2_frontend/m2.lesson01.md
@@ -31,12 +31,13 @@
 
 ### Why use a modern UI Library?
 
-* <!-- .element: class="fragment" --> Reusable Components (Not unique to React)
+* Reusable Components (Not unique to React)
+<!-- .element: class="fragment" -->
 
-* <!-- .element: class="fragment" --> Designed for [SPA](https://he.wikipedia.org/wiki/%D7%99%D7%99%D7%A9%D7%95%D7%9E%D7%99_%D7%93%D7%A3_%D7%99%D7%97%D7%99%D7%93)
+* Designed for <!-- .element: class="fragment" --> [SPA](https://he.wikipedia.org/wiki/%D7%99%D7%99%D7%A9%D7%95%D7%9E%D7%99_%D7%93%D7%A3_%D7%99%D7%97%D7%99%D7%93)
 
-* <!-- .element: class="fragment" --> Always remember: It's not mandatory
-
+* Always remember: It's not mandatory
+<!-- .element: class="fragment" -->
 
 ---
 
@@ -59,22 +60,22 @@
 ### Why React?
 React vs Angular - open discussion
 
-* Toolbox size (library vs Infrastructure)
+- Toolbox size (library vs Infrastructure)
 <!-- .element: class="fragment" -->
 
-* JSX vs Angular templating engine
+- JSX vs Angular templating engine
 <!-- .element: class="fragment" -->
 
-* Learning curve
+- Learning curve
 <!-- .element: class="fragment" -->
 
-* Redux (and other state management)
+- Redux (and other state management)
 <!-- .element: class="fragment" -->
 
-* Creation (CLI / Manual) and Refactoring
+- Creation (CLI / Manual) and Refactoring
 <!-- .element: class="fragment" -->
 
-* Virtual DOM vs Angular Change Detection
+- Virtual DOM vs Angular Change Detection
 <!-- .element: class="fragment" -->
 
 ---
@@ -108,14 +109,19 @@ ReactDOM.render(
 ### Wrap up - things to remember
 * <!-- .element: class="fragment" -->
 Do not manipulate the DOM by yourself
+
 * <!-- .element: class="fragment" -->
 Component naming convention - Capital starting character
+
 * <!-- .element: class="fragment" -->
 Component - Always start as a function
+
 * <!-- .element: class="fragment" -->
 JSX restrictions - it's javascript, not HTML. Use `className` instead of `class`
+
 * <!-- .element: class="fragment" -->
 Run javascript in JSX using single braces:
+
 ```
 <p>{Math.random()}`</p>
 ```
