--- a/module2_frontend/m2.lesson01.md
+++ b/module2_frontend/m2.lesson01.md
@@ -107,37 +107,40 @@ ReactDOM.render(
 ---
 
 ### Wrap up - things to remember
-* <!-- .element: class="fragment" -->
-Do not manipulate the DOM by yourself
+* Do not manipulate the DOM by yourself
+<!-- .element: class="fragment" -->
 
-* <!-- .element: class="fragment" -->
-Component naming convention - Capital starting character
+* Component naming convention - Capital starting character
+<!-- .element: class="fragment" -->
 
-* <!-- .element: class="fragment" -->
-Component - Always start as a function
+* Component - Always start as a function
+<!-- .element: class="fragment" -->
 
-* <!-- .element: class="fragment" -->
-JSX restrictions - it's javascript, not HTML. Use `className` instead of `class`
+* JSX restrictions - it's javascript, not HTML. Use `className` instead of `class`
+<!-- .element: class="fragment" -->
 
-* <!-- .element: class="fragment" -->
-Run javascript in JSX using single braces:
+* Run javascript in JSX using single braces:
+<!-- .element: class="fragment" -->
 
 ```
 <p>{Math.random()}`</p>
 ```
+<!-- .element: class="fragment" -->
 
 ---
 
 ### Wrap up - things to remember
-* <!-- .element: class="fragment" -->
-Only collections (like - Arrays) need keys
-* <!-- .element: class="fragment" -->
-Clear Responsibility per Component - smaller is probably better
-* <!-- .element: class="fragment" -->
-Refactor and Split as it grows
-* <!-- .element: class="fragment" -->
-Be aware to the console warnings and errors
+* Only collections (like - Arrays) need keys
+<!-- .element: class="fragment" -->
 
+* Clear Responsibility per Component - smaller is probably better
+<!-- .element: class="fragment" -->
+
+* Refactor and Split as it grows
+<!-- .element: class="fragment" -->
+
+* Be aware to the console warnings and errors
+<!-- .element: class="fragment" -->
 
 ---
 
