--- a/module1_fundamentals/m1.lesson08.md
+++ b/module1_fundamentals/m1.lesson08.md
@@ -134,7 +134,7 @@ What is a template engine?
 
 ---
 
-### A taste of Advanced JS libraries (D3, ThreeJS)
+### A taste of Cool JS libraries (D3, ThreeJS, Font awesome)
 * [ThreeJS](https://threejs.org/) 
     - [earth 2050](https://2050.earth/)
     - [infinitown](http://demos.littleworkshop.fr/infinitown)
@@ -142,7 +142,7 @@ What is a template engine?
 * [D3](https://d3js.org/) 
     - [piechard demo](http://bl.ocks.org/nadinesk/99393098950665c471e035ac517c2224) 
     - [tutorial](http://christopheviau.com/d3_tutorial/)
-
+* [Font awesome](https://fontawesome.com/)
 ---
 
 ### Further reading
