--- a/module1_fundamentals/m1.lesson10.md
+++ b/module1_fundamentals/m1.lesson10.md
@@ -41,9 +41,6 @@
 * Built-in modules (like http) VS external dependencies (like jquery)
 * versions: [1.Semantic Versioning](https://docs.npmjs.com/getting-started/semantic-versioning) [2.semver calc](https://semver.npmjs.com/)
 
-
-
-
 ---
 
 ### NPM - [node package manager](https://www.youtube.com/watch?v=x03fjb2VlGY)
@@ -64,6 +61,7 @@
 * create package
 * install package
 * use package
+* npm start
 * [gitignore](https://medium.com/@haydar_ai/learning-how-to-git-ignoring-files-and-folders-using-gitignore-177556afdbe3)
 
 
@@ -111,6 +109,12 @@
 * add a ***start*** script which start node for npm-demo.js
 * add a ***dev*** script which start nodemon for npm-demo.js
 
+
+---
+
+### node package manager (NPM)
+Open discussion: NPM (or other package managers) vs CDN vs Copy file to local
+
 ---
 
 ### Typescript - Why and What?
@@ -122,7 +126,8 @@
 <!-- .element: class="fragment" -->
 * No browser support (yet)
 <!-- .element: class="fragment" -->
-* [How does it looks like?](http://www.typescriptlang.org/play/)<!-- .element: class="fragment" -->
+* <!-- .element: class="fragment" -->
+[How does it looks like?](http://www.typescriptlang.org/play/)
 * Why using it?
 <!-- .element: class="fragment" -->
 * How to use it? (strict / loose)
