--- a/module1_fundamentals/m1.lesson11.md
+++ b/module1_fundamentals/m1.lesson11.md
@@ -48,14 +48,14 @@ Object Oriented Programming
 
 ```js
 const employee = {
-    baseSalary: 10000;
-    overtime: 20;
-    overtimeRate: 55;
+    baseSalary: 10000,
+    overtime: 20,
+    overtimeRate: 55,
 
     // look! parameterless function!
     getWage: function() {
         return this.baseSalary + (this.overtime * this.overtimeRate);
-    };
+    }
 }
 ```
 
@@ -109,11 +109,11 @@ OOP Pillars:
 
 ### A story about javascript school (1)
 
-Moshe is a web developer. For the last 6 years he's building and mantaining codebase for
+Gavriel is a web developer. For the last 6 years he's building and mantaining codebase for
 a javascript academy (the original code was written in es5).
 Zrubavel, His messy, annoying superviser, add new, unplanned requirements
 for the acadamy managing system from time to time.
-help Moshe to complete his task and achive inner peace.
+help Gavriel to complete his task and achive inner peace.
 
 
 
@@ -141,14 +141,14 @@ var moshe = new Person('David', 'Levi', 40);
 ---
 
 ### Javascript school (2)
-"Moshe!" cried Zrubavel, "our database contain only data about teachers
+"Gavriel!" cried Zrubavel, "our database contain only data about teachers
 but not for students! this is a disaster!".
-Zrubavel turned to face the window, and with his back to Moshe said to himself:
+Zrubavel turned to face the window, and with his back to Gavriel said to himself:
 "Plus, it would be great if each object could declare it's data with toString
 method, it's a total mess out there..."
 
-"OK" replied Moshe and turned to his screen.
-Help Moshe complete his task using Functions and Porotoype.
+"OK" replied Gavriel and turned to his screen.
+Help Gavriel complete his task using Functions and Porotoype.
 
 ---
 
@@ -211,11 +211,11 @@ class MyClass {
 "We've launched a new training program" said Zrubavel. "each new teacher will first be a `Trainee`,
 and will be an apprentice to more experinced teacher - A Professor. I need you to write the code. O', and make it es6 will ya?"
 
-With his back to Moshe Zrubavel said to himself:
+With his back to Gavriel Zrubavel said to himself:
 "Plus, it would be great if we can print the list of Professor-Trainee
 pairs whenever we want..."
 
-"Whatever" replied Moshe and turned to his screen.
+"Whatever" replied Gavriel and turned to his screen.
 Help him complete his task using classes.
 
 ---
@@ -285,17 +285,17 @@ function createPerson(first: string, last: string):  HasName {
 ---
 
 ### Javascript school (4)
-"Moshe!" cried Zrubavel,
+"Gavriel!" cried Zrubavel,
 "Anybody can type whatever
 they want as parameters! The new guy just shutdown the whole system
 by providing name of a new teach to be 'Null!' this is a disaster!"
 
-Zrubavel turned to face the window, and with his back to Moshe said to himself:
+Zrubavel turned to face the window, and with his back to Gavriel said to himself:
 "Plus, it would be great if we could prevent new developers from using
 super classes directly..."
 
-"Sure" replied Moshe and turned to his screen.
-Help Moshe complete his task using Typescript.
+"Sure" replied Gavriel and turned to his screen.
+Help Gavriel complete his task using Typescript.
 
 ---
 
