--- a/module1_fundamentals/m1.lesson11.md
+++ b/module1_fundamentals/m1.lesson11.md
@@ -23,9 +23,12 @@
 * OOP: the usage of "Objects" to organize code by context
 <!-- .element: class="fragment" -->
 
-* <!-- .element: class="fragment" --> organize data and function around "object" make it:
-    - more intuitive
-    - more coherent
+organize data and function around "object" make it:
+<!-- .element: class="fragment" -->
+* more intuitive
+<!-- .element: class="fragment" -->
+* more coherent
+<!-- .element: class="fragment" -->
 
 
 ---
@@ -64,7 +67,7 @@ const employee = {
 * You can still use functional programming.
 * Objects can be a parameter for a function
 <!-- .element: class="fragment" -->
-* <!-- .element: class="fragment" -->Allow chaining by returning Objects (Like: Promise.then, [Lodash Chain](https://github.com/lodash/lodash/wiki/FP-Guide#capped-iteratee-arguments))
+* <!-- .element: class="fragment" -->Allow chaining by returning Objects (Like: Promise.then, [Lodash Chain](https://lodash.com/docs/4.17.11#chain))
 * <!-- .element: class="fragment" -->
 Allow chaining by returning functions (Like: [Lodash FP](https://github.com/lodash/lodash/wiki/FP-Guide#capped-iteratee-arguments) [-2-](https://medium.com/making-internets/why-using-chain-is-a-mistake-9bc1f80d51ba) )
 
@@ -99,7 +102,7 @@ When to use Object Oriented approache?
 
 ---
 
-OOP Pillars:
+### [OOP Pillars](https://youtu.be/PFmuCDHHpwk?t=105)
 * Encapsulation
 * Abstracion
 * Inheritace
@@ -281,6 +284,15 @@ function createPerson(first: string, last: string):  HasName {
     }
 }
 ```
+
+
+---
+[TypeScript Protected Access Modifier](https://yakovfain.com/2018/10/26/abstract-classes-in-typescript/)
+* Private members are only accessible within their declaring class.
+* Protected members are only accessible within their declaring class and classes derived from it.
+* Public members can be accessed anywhere.
+* [Abstract class](https://stackoverflow.com/questions/18457865/protected-constructor-in-concrete-class-vs-public-constructor-in-abstract-class)
+cannot be instantiated, but they can be subclasse
 
 ---
 
