--- a/module1_fundamentals/m1.lesson10.md
+++ b/module1_fundamentals/m1.lesson10.md
@@ -158,7 +158,8 @@ npm install --save-dev @types/<package>
 * Init package with npm
 * Create index.ts with the following code
 ```ts
-const tsString = <string>('hi');
+let tsString: string;
+tsString = 'I am A string!';
 console.log(tsString);
 ```
 * create `dev` script
@@ -175,8 +176,7 @@ nodemon --exec ts-node index.ts
 lodash [differenceBy](https://lodash.com/docs/4.17.5#differenceBy). each will have 2 input arrays. 
 output is a single array containing the cells which exist in array1, but not in array2.
 * Functions:
-  - Function 1 input/output: array of integers
-  - Function 2 input/output: array of decimals. when comparing - each number will be rounded to the nearest integer
+  - Function 1 input/output: array of integers or decimals. when comparing - each number will be rounded to the nearest integer
   - Function 2 input/output: array of strings
 * add test for your functions with different inputs.
   
