--- a/module1_fundamentals/m1.lesson12.md
+++ b/module1_fundamentals/m1.lesson12.md
@@ -26,7 +26,8 @@
 ---
 
 ### Self learning Section
-[Overview](https://github.com/webbeast2019/content/blob/master/module1_fundamentals/m1.self_learning.md)
+* [Overview](https://github.com/webbeast2019/content/blob/master/module1_fundamentals/m1.self_learning.md)
+* Pick a subject (5 minutes)
 
 ---
 
@@ -34,7 +35,7 @@
 Pick a topic from the self-learning section and explain it to the group
 * Work in teams of 2-3
 * Prep time - 15 min
-* 4 min presentesion qith questions included
+* 4 min presentation with questions included
 
 ---
 
@@ -45,5 +46,8 @@ Pick a topic from the self-learning section and explain it to the group
 ### Further reading
 * Finish Self-Reading seaction in the following week
 
-### HW
+### Homework
 * Finish Project to next Lesson
+* Get ready for module 2:
+    - BEFORE-YOU-BEGIN.md
+    - Lesson1 prep
