--- a/module2_frontend/m2.lesson01.md
+++ b/module2_frontend/m2.lesson01.md
@@ -36,7 +36,7 @@
 
 * Designed for <!-- .element: class="fragment" --> [SPA](https://he.wikipedia.org/wiki/%D7%99%D7%99%D7%A9%D7%95%D7%9E%D7%99_%D7%93%D7%A3_%D7%99%D7%97%D7%99%D7%93)
 
-* Always remember: It's not mandatory
+* It's not mandatory
 <!-- .element: class="fragment" -->
 
 ---
@@ -47,6 +47,9 @@
 <!-- .element: class="fragment" -->
 
 * Good Ecosystem
+<!-- .element: class="fragment" -->
+
+* Modularity: Component - oriented
 <!-- .element: class="fragment" -->
 
 * Created, maintained and used by Facebook
@@ -93,6 +96,16 @@ ReactDOM.render(
   document.getElementById('root')
 );
 ```
+[Try JSX with Babel](https://babeljs.io/repl)
+
+---
+
+### [React intro](https://reactjs.org/)
+Live Demo and practice
+* How to install (for the practice we'll use CDN)
+* How JSX works
+* Basics concepts
+
 
 ---
 
@@ -123,7 +136,7 @@ ReactDOM.render(
 <!-- .element: class="fragment" -->
 
 ```
-<p>{Math.random()}`</p>
+<p>{Math.random()}</p>
 ```
 <!-- .element: class="fragment" -->
 
@@ -140,6 +153,9 @@ ReactDOM.render(
 <!-- .element: class="fragment" -->
 
 * Be aware to the console warnings and errors
+<!-- .element: class="fragment" -->
+
+* [Props are Read-Only](https://reactjs.org/docs/components-and-props.html#props-are-read-only)
 <!-- .element: class="fragment" -->
 
 ---
